tests/ui/sized-hierarchy/dyn-pointeesized-issue-142652.stderr
error[E0308]: mismatched types
  --> $DIR/dyn-pointeesized-issue-142652.rs:7:38
   |
LL |       let y: Box<dyn PointeeSized> = x;
   |              ---------------------   ^ expected `Box<dyn PointeeSized>`, found fn item
   |              |
   |              expected due to this
   |
   = note: expected struct `Box<dyn PointeeSized>`
             found fn item `fn() {main}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
